--- a/style.css
+++ b/style.css
@@ -9,13 +9,14 @@ body{
 }
 
 .container{
-  margin-top: 10rem;
+  margin-top: 7rem;
   display: flex;
   flex-direction: row;
 }
 .perfume-img{
   width: 300px;
   height: 450px;
+  border-radius: 10px 0px 0px 10px ;
 }
 
 main{
@@ -23,8 +24,9 @@ main{
   height: 450px;
   background-color: hsl(0, 0%, 100%);
   padding: 0px 30px;
-  
-}
+  border-radius: 0px 10px 10px 0px ;
+} 
+
 
 p{
   font-size: 14px;
@@ -47,9 +49,11 @@ p{
 
 .description{
   margin-top: 10px;
+  line-height: 20px;
 }
 
 .price{
+  margin-top: -5px;
   display: flex;
   flex-direction: row;
  align-items: center;
